feat: Add Izipay payment method integration
- Add Izipay payment method to database with PEN currency support
- Update PaymentMethodManagement component to support Izipay configuration
- Add Izipay payment type with proper icon and labeling
- Include Izipay configuration section in admin interface
- Add Izipay to payment method types and form options
- Update form submission and state management for Izipay
- Fix Prisma connection issues and authentication problems
- Add comprehensive Izipay integration documentation
- Clean up old Rasa model files and update dependencies

Payment methods now include: Bank Transfer, Cash, Izipay (Perú), and Stripe

--- a/backend/rasa/env.example
+++ b/backend/rasa/env.example
@@ -21,8 +21,10 @@ RASA_NLU_ENDPOINTS=endpoints.yml
 PYTHONPATH=/opt/render/project/src
 
 # Optional: Database configuration for tracker store
-# TRACKER_STORE_TYPE=memory
-# DATABASE_URL=your-database-url
+TRACKER_STORE_TYPE=postgres
+# DATABASE_URL format: postgresql://USER:PASSWORD@HOST:PORT/DBNAME
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/rasa
+POSTGRES_DB=rasa
 
 # Optional: Redis for tracker store
 # REDIS_URL=redis://your-redis-url
