--- a/backend/rasa/requirements.txt
+++ b/backend/rasa/requirements.txt
@@ -27,7 +27,10 @@ python-dotenv==1.0.0
 pytz==2023.3
 
 # Build tools
-setuptools==68.2.2
+setuptools==70.3.0
+SQLAlchemy<2.0
+psycopg2-binary==2.9.9
+ruamel.yaml==0.17.21
 wheel==0.41.2
 
 # TensorFlow for ML (CPU version for Render)
