--- a/backend/rasa/endpoints.yml
+++ b/backend/rasa/endpoints.yml
@@ -17,20 +17,17 @@ action_endpoint:
 # By default the conversations are stored in memory.
 # https://rasa.com/docs/rasa/tracker-stores
 
-#tracker_store:
-#    type: redis
-#    url: <host of the redis instance, e.g. localhost>
-#    port: <port of your redis instance, usually 6379>
-#    db: <number of your database within redis, e.g. 0>
-#    password: <password used for authentication>
-#    use_ssl: <whether or not the communication is encrypted, default false>
+tracker_store:
+  type: SQL
+  dialect: postgresql
+  # Use DATABASE_URL provided by environment. Do not include default fallback to avoid literal string parsing issues.
+  url: "${DATABASE_URL}"
+  login_db: "${POSTGRES_DB:rasa}"
+  pool_size: 10
+  pool_recycle: 300
+  echo: false
 
-#tracker_store:
-#    type: mongod
-#    url: <url to your mongo instance, e.g. mongodb://localhost:27017>
-#    db: <name of the db within your mongo instance, e.g. rasa>
-#    username: <username used for authentication>
-#    password: <password used for authentication>
+# Note: tracker store uses PostgreSQL when DATABASE_URL is provided.
 
 # Event broker which all conversation events should be streamed to.
 # https://rasa.com/docs/rasa/event-brokers
