Add admin user seeding scripts and update credentials
- Created seed-admin-user.js for comprehensive admin user management
- Created update-admin-password.js for password updates
- Added npm script 'db:seed:admin' for easy execution
- Updated admin credentials to admin@matmax.store / matmax2025
- Added comprehensive README for seeding scripts
- Verified login functionality works correctly
- Admin user now has full system access with proper role

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
             "db:generate": "prisma generate",
             "db:push": "prisma db push",
             "db:seed": "tsx prisma/seed.ts",
+            "db:seed:admin": "node scripts/seed-admin-user.js",
             "db:studio": "prisma studio",
             "db:pull": "prisma db pull",
             "db:optimize": "node scripts/optimize-database.js",
