feat: Add comprehensive email validation for all booking flows
- Created email-validation.ts utility with support for all valid domains and TLDs
- Updated validation schemas to use enhanced email validation
- Enhanced all booking flow components with real-time email validation
- Removed warnings for uncommon TLDs while maintaining strict format validation
- Added visual feedback for invalid email addresses
- Ensures only valid email formats are accepted for booking

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -110,7 +110,7 @@
             "vercel:env:pull": "vercel env pull .env.local",
             "lyra:validate": "node scripts/validate-lyra-config.js",
             "lyra:test": "node scripts/test-lyra-integration.js",
-            "lyra:test-1sol": "node scripts/test-1sol-payment.js",
+            "test:duplicates": "node scripts/test-duplicate-prevention.js",
             "postinstall": "prisma generate"
       }
 }
