--- a/frontend/.vercelignore
+++ b/frontend/.vercelignore
@@ -1,43 +1,89 @@
-# Vercel ignore file - Exclude Rasa and Docker files
-# Vercel only needs Next.js files
-
-# Rasa directory (deployed separately on Render.com)
-rasa/
-
-# Docker files (not needed for Vercel)
-Dockerfile*
-docker-compose*
-.dockerignore
-
-# Render.com configuration
-render.yaml
-
-# Environment setup scripts
-add-vercel-env*
-VERCEL_*
-
-# Documentation
-DOCKER_SETUP.md
-VERCEL_*.md
-
-# Python files
-*.py
-requirements.txt
-start-rasa.sh
-
-# Node modules (will be installed by Vercel)
+# Dependencies
 node_modules/
-
-# Build artifacts
-.next/
-out/
-dist/
-
-# Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Rasa files (not needed for frontend deployment)
+rasa/
+*.gz
+*.tar
+*.zip
+
+# Development files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # OS generated files
 .DS_Store
@@ -48,12 +94,42 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+# Backup files
+backups/
+*.backup
+*.bak
+
+# Test files
+test-*
+debug-*
+
+# Documentation files
+*.md
+!README.md
+
+# Large media files
+*.mp4
+*.avi
+*.mov
+*.wmv
+*.flv
+*.webm
+
+# Archive files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
 
 # Temporary files
-*.tmp
-*.temp
+tmp/
+temp/
